--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,15 +5,25 @@ server {
     location / {
         root /usr/local/bin/frontend;
         index index.html index.htm;
-        try_files $uri $uri/ /index.html;  # Убери =404
+        try_files $uri $uri/ /index.html;  # Если файл не найден, вернется index.html
     }
-    
-        location /assets/ {
-        root /usr/local/bin/frontend/assets;
-        try_files $uri $uri/ =404;
+
+    # Обслуживание всех статических файлов из папки assets
+    location /assets/ {
+        root /usr/local/bin/frontend;  # Указываем корень как frontend, assets внутри него
+        try_files $uri =404;  # Если файл не найден, вернуть 404
+
+        # MIME-типы для статики
         types {
             text/css css;
             application/javascript js;
+            image/svg+xml svg;
+            image/png png;
+            image/jpeg jpeg;
+            font/woff2 woff2;
+            font/woff woff;
+            application/font-woff2 woff2;
+            application/font-woff woff;
         }
     }
 }
