--- a/nginx.conf
+++ b/nginx.conf
@@ -34,8 +34,8 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /static/ {
-            proxy_pass http://frontend:8081/static/;
+        location /assets/ {
+            proxy_pass http://frontend:8081/assets/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
