--- a/nginx.conf
+++ b/nginx.conf
@@ -34,13 +34,9 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # location /assets/ {
-        #     proxy_pass http://frontend:8081/assets/;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $scheme;
-        # }
+        location = /assets {
+            return 404;
+        }
 
         # Проксирование запросов на API
         location /api/v1 {
