--- a/nginx.conf
+++ b/nginx.conf
@@ -40,14 +40,14 @@ http {
 
         # Проксирование запросов на API
         location /api/v1 {
-            proxy_pass http://backend:8080/api/v1;
+            proxy_pass http://backend-v1:8080/api/v1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
         location /api/v2 {
-            proxy_pass http://backend:8083/api/v2;
+            proxy_pass http://backend-v2:8083/api/v2;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
